--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,6 +7,7 @@
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
   </view>
+  <view class="msg">{{message}}</view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
