--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,6 @@
 <!--index.wxml-->
-<view class="container">
+<view class="container" style="width:100%">
+<navigator url="../productCategory/productCategory"  open-type="redirect" >
   <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <block wx:else>
@@ -10,4 +11,5 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
+  </navigator>
 </view>
