--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,8 @@
 /**index.wxss**/
+Page{
+  width:100%;
+  box-sizing: border-box;
+}
 .userinfo {
   display: flex;
   flex-direction: column;
@@ -17,5 +21,5 @@
 }
 
 .usermotto {
-  margin-top: 200px;
+  margin-top: 200rpx;
 }
