--- a/pages/sellProduct/sellProduct.wxml
+++ b/pages/sellProduct/sellProduct.wxml
@@ -2,7 +2,6 @@
 <view class="">
     <progress percent="40" stroke-width="12" color="#3396E4"/>
      <view class="section">
-        <!-- <view class="section__title">日期选择器</view> -->
           <picker mode="date" value="{{date}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
           <view class="picker">            
             <input placeholder="请输入购机日期" auto-focus class="white-input input-1" bindtap="clickDate" value="{{date}}"  bindblur="bindDate"/>
@@ -13,33 +12,19 @@
 </view>
 
  <navigator url="../scan/scan" class="wid">
- <view class="item_container" wx:if="{{flagDate && flagMoney}}">
-    <view class="item_p">
-      <view class="item_img item_img72"><image src="../image/yuhe.png" style="width:72px;height:72px"></image></view>
-      <view class="item_content">
-        <text class="">愈合</text>
-        <p class="item_over item_font12 item_color">感受大自然的力量</p>
-        <button class="item_button item_font12 item_color">产品价格</button>
+  <view class="item_container" wx:if="{{flagDate && flagMoney}}" >
+    <view class="popup_content"  wx:for="{{serviceList}}" wx:key="item.id">
+      <view class="item_container" v-for="item in serviceOptionItems.serviceOptionItemsList">
+        <view class="item_p item_nomargin">
+          <view class="item_img item_img62"><image src="../image/popup.png" style="width:62px;height:62px"></image></view>
+            <view class="item_content">
+                <p class="item_over popup_color3">{{item.name}}</p>
+                <p class="popup_color8">累计销售 {{item.sale}} 份</p>
+            </view>
+            <view class="item_price">{{item.unitPrice}} 元</view>
+          <view class="item_link"></view>
+        </view>
       </view>
-      <view class="item_link"></view>
     </view>
-    <!-- <mt-popup v-model="serviceOptionItems.visiblePopup" position="bottom" :closeOnClickModal="false">
-      <div class="popup_title">
-        <div class="popup_title_content">服务价目表</div>
-        <div class="popup_title_x">x</div>
-      </div>
-      <div class="popup_content">
-        <div class="item_container" v-for="item in serviceOptionItems.serviceOptionItemsList">
-          <div class="item_p">
-            <div class="item_img item_img62"><img :src="item.imageUrl"></div>
-            <div class="item_content">
-              <p class="item_over popup_color3">{{item.name}}</p>
-              <p class="popup_color8">累计销售 {{item.sale}} 份</p>
-            </div>
-            <div class="item_price">{{item.unitPrice}} 元</div>
-          </div>
-        </div>
-      </div>
-    </mt-popup> -->
   </view>
 </navigator>
