--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,21 +2,21 @@
 <view class="container">
 <!-- <web-view src="https://vue.fusion.tst.zanservice.com/"></web-view>   -->
 <view class="container" style="width:100%">
-<navigator url="../productCategory/productCategory"  open-type="redirect" >
+<navigator url="../product/productCategory/productCategory"  open-type="redirect" >
   <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userinfo.avatarUrl}}" background-size="cover"></image>
+      <text class="userinfo-nickname">{{userinfo.nickName}}</text>
     </block>
   </view>
   <view class="msg">{{message}}</view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
-</view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
   </navigator>
+</view>
 </view>
