--- a/pages/pay/cashier/cashier.wxss
+++ b/pages/pay/cashier/cashier.wxss
@@ -1,1 +1,50 @@
-/* pages/pay/cashier/cashier.wxss */
+.bg {
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#3396E4), to(#F0EFF5)); 
+  height: 200px;
+  text-align: center;
+  line-height: 200px;
+}
+
+image {
+  width: 50px;
+  height:50px;
+  border-radius: 50%;
+}
+
+.box {
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 15px;
+  background: #fff;
+  padding: 30px 15px;
+  box-sizing: border-box;
+  font-size: 12px;
+  margin-top: -50px;
+}
+
+.dec {
+  background: #fff;
+  line-height: 40px;
+  display: flex;
+}
+
+.dec_title {
+  flex: 1;
+}
+
+.dec_text {
+  color: #888;
+}
+
+input {
+  border-bottom: 1px solid #e5e5e5;
+  margin-top: 20px;
+}
+
+button {
+  font-size: 12px;
+  width: 90%;
+  margin-top: 30px;
+  background: #3396E4;
+  color: #fff;
+}
